syntax = "proto3";

option csharp_namespace = "UserService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UserServiceAddMessage{
	rpc AddMessage (UserRequest) returns (google.protobuf.Empty);
	rpc GetUserStream (google.protobuf.Empty) returns (UserResponse);
	rpc UserConnected (UserConnect) returns (google.protobuf.Empty);
	rpc UserDisconnected (UserDisconnect) returns (google.protobuf.Empty);
}

message UserRequest{
	MessagePattern message = 1;
}

message UserResponse{
	repeated MessagePattern listOfMessage = 1;
}
message UserConnect{
	string userName = 1;
}

message UserDisconnect{
	string userName = 1;
}
message MessagePattern{
	string dateTime = 1;
	string userName = 2;
	string message = 3;
}